[gd_scene load_steps=2 format=3 uid="uid://cln2vyrxnosui"]

[ext_resource type="Script" path="res://info_panel.gd" id="1_jtk5p"]

[node name="InfoPanel" type="Panel"]
offset_right = 1150.0
offset_bottom = 192.0
script = ExtResource("1_jtk5p")

[node name="MoneyLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 224.0
offset_top = 72.0
offset_right = 544.0
offset_bottom = 98.0
text = "[MONEY]"
horizontal_alignment = 1

[node name="RentLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 656.0
offset_top = 72.0
offset_right = 976.0
offset_bottom = 98.0
text = "[RENT]"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 414.0
offset_top = 32.0
offset_right = 734.0
offset_bottom = 58.0
text = "[MESSAGES]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StoreButton" type="Button" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 112.0
offset_right = 224.0
offset_bottom = 184.0
text = "Store"

[node name="TransportButton" type="Button" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 112.0
offset_right = 520.0
offset_bottom = 184.0
text = "Depot"

[node name="ManufacturingButton" type="Button" parent="."]
layout_mode = 0
offset_left = 632.0
offset_top = 112.0
offset_right = 800.0
offset_bottom = 184.0
text = "Factory"

[node name="GatheringButton" type="Button" parent="."]
layout_mode = 0
offset_left = 928.0
offset_top = 112.0
offset_right = 1096.0
offset_bottom = 184.0
text = "Mine"

[connection signal="pressed" from="StoreButton" to="." method="_on_store_button_pressed"]
[connection signal="pressed" from="TransportButton" to="." method="_on_transport_button_pressed"]
[connection signal="pressed" from="ManufacturingButton" to="." method="_on_manufacturing_button_pressed"]
[connection signal="pressed" from="GatheringButton" to="." method="_on_gathering_button_pressed"]
